agregando un pendejo

--- a/index.html
+++ b/index.html
@@ -53,6 +53,17 @@
                     <span class="badge text-bg-success">Activo</span>
                 </td>
             </tr>
+
+            <tr>
+                <td>3</td>
+                <td>Daví Oití</td>
+                <td>Santiago</td>
+                <td>Cienfuegos.</td>
+                <td>
+                    <span class="badge text-bg-success">Activo</span>
+                </td>
+            </tr>
+
         </tbody>
     </table>
    </div>
